fully dynamic translator, centered slide titles, minor wrapping bug on Reviews still.

--- a/EyeView/resources/menubarStyle.css
+++ b/EyeView/resources/menubarStyle.css
@@ -12,7 +12,7 @@
 	-fx-text-fill: white;
 	-fx-text-alignment: center;
 	-fx-font-weight: bold;
-	-fx-font-size: 15;
+	-fx-font-size: 14;
     -fx-label-padding: 0;
     -fx-wrap-text: true;
     -fx-cursor: hand;
